# trading-bot

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
scripts/: detect-secrets-hook  setup_dev_env.sh
trading_bot/: config.py  connection.py  contracts.py  market_data.py  order_manager.py  orders.py  session.py  utils.py
trading_bot/scripts/: cancel_order.py  connect_test.py  detect-secrets-hook  list_open_orders.py  live_strategy_runner.py  market_data_test.py  move_stop_order.py  place_market_order.py  run_strategy.py
