[project]
name = "trading-bot"
version = "0.1.0"
description = "IB trading bot (paper or live trading mode)"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ib_insync = "^0.9.84"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"
pre-commit = "^4.2.0"
detect-secrets = "^1.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
